Removed usage of DOCKER_HOST_NAME environment variable. Deducing the DOCKER_HOST_NAME from the DOCKER_HOST instead.