@@ -1,9 +1,9 @@
 import static org.junit.Assert.assertTrue;
 
 import java.io.BufferedReader;
-import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Properties;
 
@@ -12,12 +12,12 @@ import org.junit.Test;
 public class HelloWorldIT {
 
     @Test
-    public void testHelloWorld() throws IOException {
-
+    public void testHelloWorld() throws Exception {
         final Properties testProperties = new Properties();
         testProperties.load(getClass().getClassLoader().getResourceAsStream("test.properties"));
 
-        final URL testURL = new URL(testProperties.getProperty("testurl"));
+        final URL testURL = new URL("http://" + (new URI(System.getenv("DOCKER_HOST"))).getHost() + ":" + testProperties
+                .getProperty("portnumber") + "/" + testProperties.getProperty("contextpath"));
         final HttpURLConnection connection = (HttpURLConnection) testURL.openConnection();
         connection.setRequestMethod("GET");
 
